Rebase the patch
